bootstrap/tests/snapshots/lexer_tests__err_unclosed_comment.diag.snap
---
source: tests/lexer_tests.rs
assertion_line: 32
expression: error_msg
---

● E1000: Invalid token [Lexer]
────────────────────────────────────────────────────────────
  → <input>:2:1

     2 │
       │ /*
       │ ^^^
       │

  ⓘ Encountered an invalid token: '/*
 * Este comentario no se cierra
'

  💡 Check for unexpected characters or typos in your code

  📚 Learn more: https://github.com/liva-lang/livac/blob/main/docs/ERROR_CODES.md#e1000
────────────────────────────────────────────────────────────
