bootstrap/tests/snapshots/lexer_tests__err_unclosed_string.diag.snap
---
source: tests/lexer_tests.rs
assertion_line: 32
expression: error_msg
---

● E1000: Invalid token [Lexer]
────────────────────────────────────────────────────────────
  → <input>:2:9

     2 │
       │ let x = "Hello, World!
       │         ^^^
       │

  ⓘ Encountered an invalid token: '"Hello, World!
'

  💡 Check for unexpected characters or typos in your code

  📚 Learn more: https://github.com/liva-lang/livac/blob/main/docs/ERROR_CODES.md#e1000
────────────────────────────────────────────────────────────
