bootstrap/tests/snapshots/lexer_tests__ok_identifiers.tokens.snap
---
source: tests/lexer_tests.rs
expression: output
---
Tokens: [
    "Let",
    "Ident(\"x\")",
    "Assign",
    "IntLiteral(10)",
    "Let",
    "PrivateIdent(\"_private\")",
    "Assign",
    "IntLiteral(20)",
    "Let",
    "Ident(\"camelCase\")",
    "Assign",
    "IntLiteral(30)",
    "Let",
    "Ident(\"snake_case\")",
    "Assign",
    "IntLiteral(40)",
    "Let",
    "Ident(\"UPPER_CASE\")",
    "Assign",
    "IntLiteral(50)",
    "Let",
    "Ident(\"with123numbers\")",
    "Assign",
    "IntLiteral(60)",
]
