bootstrap/tests/snapshots/lexer_tests__ok_literals.tokens.snap
---
source: tests/lexer_tests.rs
expression: output
---
Tokens: [
    "Let",
    "Ident(\"int\")",
    "Assign",
    "IntLiteral(42)",
    "Let",
    "Float",
    "Assign",
    "FloatLiteral(3.14)",
    "Let",
    "Ident(\"negative_int\")",
    "Assign",
    "Minus",
    "IntLiteral(100)",
    "Let",
    "Ident(\"negative_float\")",
    "Assign",
    "Minus",
    "FloatLiteral(2.5)",
    "Let",
    "String",
    "Assign",
    "StringLiteral(\"Hello, World!\")",
    "Let",
    "CharType",
    "Assign",
    "CharLiteral('A')",
    "Let",
    "Ident(\"bool_true\")",
    "Assign",
    "True",
    "Let",
    "Ident(\"bool_false\")",
    "Assign",
    "False",
    "Let",
    "Ident(\"string_template\")",
    "Assign",
    "StringTemplate(\"Hello {name}!\")",
    "Let",
    "Ident(\"multiline_string\")",
    "Assign",
    "StringLiteral(\"Line 1\\nLine 2\\nLine 3\")",
]
